--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="videos"></div>
                 </div>
             </div>
-            <div class="more-video-section">
+            <div class="more-video-section-small">
                 <h1>Popular on Netflix</h1>
                 <div class="popular-videos-section">
                     <div class="videos"></div>
